[package]
name = "rrr"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

[dependencies]
dirs = "4.0.0"
open = "2.0.1"
tui = "0.16.0"
fehler = "1.0.0"
termion = "1.5.6"
anyhow = "1.0.44"
itertools = "0.10.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "read_directory"
harness = false
